--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -152,6 +152,55 @@
         </div>
     </section>
 
+    <!-- Section Témoignages avec Flammes -->
+    <section id="testimonials" class="content-section">
+        <div class="section-container">
+            <h2 class="section-title">Ce que nos clients disent</h2>
+            <p class="section-description">Découvrez les expériences de nos convives</p>
+            <div class="flames-container">
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">😊</div>
+                            <div class="flame-face face-2">😄</div>
+                            <div class="flame-face face-3">😍</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Une expérience gastronomique exceptionnelle ! Les plats sont délicieux et l'ambiance est chaleureuse."</p>
+                            <p class="testimonial-author">- Marie D.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">🤩</div>
+                            <div class="flame-face face-2">😋</div>
+                            <div class="flame-face face-3">🥰</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Le meilleur restaurant belge de la ville ! Les carbonnades flamandes sont à tomber."</p>
+                            <p class="testimonial-author">- Jean-Pierre L.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">😎</div>
+                            <div class="flame-face face-2">😃</div>
+                            <div class="flame-face face-3">😊</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Service impeccable et cuisine authentique. Nous reviendrons certainement !"</p>
+                            <p class="testimonial-author">- Sophie M.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Section Conditions Générales -->
     <section id="terms-section" class="content-section">
         <div class="section-container">
