--- a/Views/Home/Index.nl.cshtml
+++ b/Views/Home/Index.nl.cshtml
@@ -152,6 +152,55 @@
         </div>
     </section>
 
+    <!-- Section Témoignages avec Flammes -->
+    <section id="testimonials" class="content-section">
+        <div class="section-container">
+            <h2 class="section-title">Wat onze klanten zeggen</h2>
+            <p class="section-description">Ontdek de ervaringen van onze gasten</p>
+            <div class="flames-container">
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">😊</div>
+                            <div class="flame-face face-2">😄</div>
+                            <div class="flame-face face-3">😍</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Een uitzonderlijke gastronomische ervaring! De gerechten zijn heerlijk en de sfeer is warm."</p>
+                            <p class="testimonial-author">- Marie D.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">🤩</div>
+                            <div class="flame-face face-2">😋</div>
+                            <div class="flame-face face-3">🥰</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Het beste Belgische restaurant van de stad! De Vlaamse karbonades zijn om van te smullen."</p>
+                            <p class="testimonial-author">- Jean-Pierre L.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flame-wrapper">
+                    <div class="flame">
+                        <div class="flame-heads">
+                            <div class="flame-face face-1">😎</div>
+                            <div class="flame-face face-2">😃</div>
+                            <div class="flame-face face-3">😊</div>
+                        </div>
+                        <div class="flame-content">
+                            <p class="testimonial-text">"Uitstekende service en authentieke keuken. We komen zeker terug!"</p>
+                            <p class="testimonial-author">- Sophie M.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Section Conditions Générales -->
     <section id="terms-section" class="content-section">
         <div class="section-container">
