--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,6 @@
                         {
                             <a href="#" class="btn btn-outline-light mx-2" id="btnClientLogin" data-bs-toggle="modal" data-bs-target="#clientLoginModal" role="button">@clientLoginLabel</a>
                         }
-                        <a href="#" class="btn btn-outline-light" id="btnAdminLogin">@adminLoginLabel</a>
                         <div class="ms-3">
                             @{
                                 var req = Context?.Request;
@@ -120,11 +119,16 @@
                             <input type="password" id="clientLoginPassword" name="password" class="form-control" required>
                             <div class="form-text">@clientFormHelper</div>
                         </div>
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between mb-3">
                             <button type="submit" class="btn btn-primary">@(isNlClientModal ? "Inloggen" : "Se connecter")</button>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@(isNlClientModal ? "Annuleren" : "Annuler")</button>
                         </div>
                     </form>
+                    <div class="modal-divider"></div>
+                    <div class="text-center">
+                        <p class="modal-admin-label">@(isNlClientModal ? "Beheerder?" : "Administrateur?")</p>
+                        <button type="button" class="btn btn-admin-link" id="btnAdminLoginFromModal" data-bs-dismiss="modal">@(isNlClientModal ? "Beheerderslogin" : "Connexion Administrateur")</button>
+                    </div>
                 </div>
             </div>
         </div>
