--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -16,8 +16,18 @@
 
     <!-- Fichier CSS du layout (séparé du reste) -->
     <link rel="stylesheet" href="~/css/StyleLayout.css">
+    <link rel="stylesheet" href="~/css/ElegantBackground.css">
+    <link rel="stylesheet" href="~/css/StyleAdmin.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Cormorant+Garamond:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body class="layout-global admin-layout">
+    <div class="elegant-background">
+        <div class="curved-shape shape-1"></div>
+        <div class="curved-shape shape-2"></div>
+        <div class="curved-shape shape-3"></div>
+    </div>
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -61,7 +71,7 @@
         </nav>
     </header>
 
-    <div class="container mt-4">
+    <div class="container mt-4 admin-content page-elegant">
         @RenderBody()
     </div>
 
